@@ -1274,6 +1274,7 @@ options.loadsave.newView=Client instances open files in new view
 options.loadsave.persistentMarkers=Save marker positions
 options.loadsave.twoStageSave=Two-stage save (safer but resets file owner on Unix)
 options.loadsave.parseFully=More accurate syntax highlighting (slows file loading)
+options.loadsave.backupEverySave=Backup on every save
 #}}}
 
 #{{{ Text Area pane
